Skeleton and pixel pusher socket progress

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ include_directories("lib/BlockingCollection")
 
 set(CMAKE_CXX_FLAGS "-Wall -pthread")
 
+string(LENGTH "${CMAKE_SOURCE_DIR}/" SOURCE_PATH_SIZE)
+add_definitions("-DSOURCE_PATH_SIZE=${SOURCE_PATH_SIZE}")
+
 file(GLOB SOURCES "src/*.cpp")
 
 add_executable(run.exe ${SOURCES})
