Small progress towards visualizer consumer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,15 @@ include_directories("lib/BlockingCollection" "src")
 
 set(CMAKE_CXX_FLAGS "-Wall -pthread")
 
+# Import SDL2
+find_package(SDL2 REQUIRED)
+include_directories(${SDL2_INCLUDE_DIRS})
+
+# Used to allow src/misc/Log.h to truncate source file indicator
 string(LENGTH "${CMAKE_SOURCE_DIR}/" SOURCE_PATH_SIZE)
 add_definitions("-DSOURCE_PATH_SIZE=${SOURCE_PATH_SIZE}")
 
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 add_executable(run.exe ${SOURCES})
+target_link_libraries(run.exe ${SDL2_LIBRARIES})
