Change C++ standard to c++17

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,5 @@ file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 add_executable(run.exe ${SOURCES})
 target_link_libraries(run.exe ${SDL2_LIBRARIES})
+
+set_property(TARGET run.exe PROPERTY CXX_STANDARD 17)
