--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "res/fonts"]
 	path = res/fonts
 	url = https://github.com/opensourcedesign/fonts
+[submodule "radiance"]
+	path = radiance
+	url = https://github.com/zbanks/radiance
